--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   window.goTo = function (id) {
     show(id);
     try { history.replaceState(null, '', '#' + id); } catch (e) { location.hash = id; }
-   if(/^game\d+$/.test(id)){ var g=parseInt(id.replace('game','')); try{ const set=sets[g]; const total=Object.keys(g===2?data2: g===3?data3: g===4?data4: g===5?data5: g===6?data6: g===7?data7: data1).length; const b=document.getElementById('btnCCTP'+g); if(b){ b.style.display=(set.size>=total)?'inline-block':'none'; } }catch(e){} } };
+   if(/^game\d+$/.test(id)){ var g=parseInt(id.replace('game','')); try{ const set=sets[g]; const total=Object.keys(g===2?data2: g===3?data3: g===4?data4: g===5?data5: g===6?data6: g===7?data7: g===8?data8: data1).length; const b=document.getElementById('btnCCTP'+g); if(b){ b.style.display=(set.size>=total)?'inline-block':'none'; } }catch(e){} } };
   window.addEventListener('hashchange', function () {
     var id = (location.hash || '#home').slice(1);
     show(id);
@@ -157,7 +157,14 @@
       <p class="muted">Raccordement HTA : explorez les services, puis rédigez le cahier des charges.</p>
       <button class="btn" onclick="goTo('game5_intro')">Lancer</button>
     </div>
-  </div>
+  
+
+    <div class="card">
+      <h3>Jeu C — Études Réseau (Laurène)</h3>
+      <p class="muted">Études réseaux BT / HTA et fibre : explorez les services, puis rédigez le cahier des charges.</p>
+      <button class="btn" onclick="goTo('game8_intro')">Lancer</button>
+    </div>
+</div>
   <button class="btn secondary" onclick="goTo('home')">⬅ Retour</button>
 </div></div>
 
@@ -224,6 +231,16 @@
   <h2>COPAYA — Jeu B (Raccordement HTA)</h2>
   <p>Vous incarnez Carl, nouveau chargé d’affaires du service réseau. Vous êtes en charge de la rédaction d’un cahier des charges pour le raccordement HTA d’un village.</p>
   <button class="btn" onclick="goTo('game5')">Démarrer</button>
+  <button class="btn secondary" onclick="goTo('domain_reseau')">⬅ Retour</button>
+</div></div>
+
+
+
+<div id="game8_intro" class="screen"><div class="container">
+  <img class="hero" src="images/copaya_c_accueil.png" alt="">
+  <h2>COPAYA — Jeu C (Études Réseau)</h2>
+  <p>Vous incarnez Laurène, nouvelle arrivante dans le service réseau. Sa première mission est de réaliser le nouveau cahier des charges pour réaliser des études de réseaux.</p>
+  <button class="btn" onclick="goTo('game8')">Démarrer</button>
   <button class="btn secondary" onclick="goTo('domain_reseau')">⬅ Retour</button>
 </div></div>
 
@@ -330,6 +347,25 @@
   <div class="info-log" id="infoLog5"></div>
   <div style="margin-top:10px;display:flex;gap:.5rem;flex-wrap:wrap">
     <button class="btn" id="btnCCTP5" style="display:none" onclick="startBuilder(5,true)">Rédiger le cahier des charges</button>
+    <button class="btn secondary" onclick="goTo('domain_reseau')">⬅ Retour</button>
+  </div>
+</div></div>
+
+
+
+<div id="game8" class="screen"><div class="container">
+  <h2>COPAYA — Jeu C (Études Réseau)</h2>
+  <div class="map">
+    <div class="location" onclick="openModal('Manager C',8)"><img src="https://cdn-icons-png.flaticon.com/512/219/219986.png" alt="">Manager</div>
+    <div class="location" onclick="openModal('Equipes C',8)"><img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="">Équipes</div>
+    <div class="location" onclick="openModal('Contract Manager C',8)"><img src="https://cdn-icons-png.flaticon.com/512/1995/1995525.png" alt="">Contract Manager</div>
+    <div class="location" onclick="openModal('Juriste C',8)"><img src="https://cdn-icons-png.flaticon.com/512/2569/2569069.png" alt="">Juriste</div>
+    <div class="location" onclick="openModal('Prévention C',8)"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="">Prévention</div>
+    <div class="location" onclick="openModal('Acheteur C',8)"><img src="https://cdn-icons-png.flaticon.com/512/602/602220.png" alt="">Acheteur</div>
+  </div>
+  <div class="info-log" id="infoLog8"></div>
+  <div style="margin-top:10px;display:flex;gap:.5rem;flex-wrap:wrap">
+    <button class="btn" id="btnCCTP8" style="display:none" onclick="startBuilder(8,true)">Rédiger le cahier des charges</button>
     <button class="btn secondary" onclick="goTo('domain_reseau')">⬅ Retour</button>
   </div>
 </div></div>
@@ -631,20 +667,83 @@ Lors de ses interventions, le ou les Titulaire(s) pourront être soumis :
   }
 };
 
-let currentGame=0,currentKey='';const sets={1:new Set(),2:new Set(),3:new Set(),4:new Set(),5:new Set(),6:new Set(),7:new Set()};
+const data8={
+  'Manager C':{
+    text:`Ce marché sert à couvrir les prestations de réalisation d’études réseau, branchement et colonne relevant des domaines BT et HTA, en aérien ou souterrain, sur tout le territoire de la Guyane ; toutes sujétions comprises conformément au CCTP.
+En option, la réalisation d’études relevant de la pose de fibre Optique aérienne et souterraines, sur tout le territoire de la Guyane.
+
+Voici le détail des actions attendues du futur prestataire :
+- Etude création, extension, renforcement, renouvellement, restructuration des réseaux HTA et BT
+- Etude déplacement d’ouvrages HTA et BT
+- Etude de raccordements des projets producteurs HTA
+- Etude de pose de fibres optiques en souterrains
+- Etude de pose de fibres optiques en aérien`,
+    image:"images/copaya_c_manager.png"
+  },
+  'Equipes C':{
+    text:`Il est nécessaire que les prestataires disposent des qualifications ETA et ETS.
+Ces qualifications comportent entre autres les connaissances suivantes nécessaires à l'exécution de la prestation :
+- Connaître les procédures administratives et techniques de la réglementation UTE C 18-510-1 et textes associés
+- Connaître les procédures administratives et techniques d'intervention sur le domaine public et la réglementation relative aux DT-DICT
+- Savoir lire un plan et un récépissé DT DICT
+- Savoir réaliser un marquage au sol ou piquetage in situ
+- Savoir lire des schémas électriques, connaître les régimes de neutre
+- Connaître et appliquer le guide technique relatif aux travaux à proximité des réseaux
+- Savoir lire des plans de réseaux HTA ou BT, carte IGN, fond de plans
+- Connaître les matériels électriques de réseau BT, les postes DP HTA/BT, les types de support (béton et bois), les isolateurs, les différents types d'armements, l'appareillage électriques (les coffrets, les postes HTA/BT, les postes sur poteau, les postes dits pied de poteau)
+- Connaître les différents types de matériaux du remblayage et de la réfection (provisoire et définitive) et les différentes qualités de compactage Q1, Q2, Q3 et Q4
+- Savoir lire une coupe type de reconstitution du sous-sol.`,
+    image:"images/copaya_c_equipes.png"
+  },
+  'Contract Manager C':{
+    text:`Le délai standard pour réaliser des études sur le littoral est de 1 mois.
+Le délai standard pour réaliser des études sur les communes de l’intérieur est de 3 mois.`,
+    image:"images/copaya_c_contract_manager.png"
+  },
+  'Juriste C':{
+    text:`La sous-traitance est autorisée mais ne peut pas porter sur l’objet principal de la prestation.
+Seule la sous-traitance de niveau 1 est autorisée.
+
+Aptitudes requises	Détention obligatoire par le Titulaire	Sous-traitance possible
+ETA	Oui	Non
+ETS	Oui	Non
+Carto V3 ou PGOC	Non	Oui
+
+Copaya dispose d’obligations pendant la durée du marché :
+- Fournir les fonds de plan sous 10 jours. S’ils ne sont pas disponibles, nous pouvons autoriser le Titulaire à travailler à partir du cadastre.
+- Valider l’étude réalisée par le Titulaire sous 10 jours après réception dans l’outil numérique (I-PLANTE)
+
+Le Titulaire devra nous informer des éventuels points d’arrêt, nous proposer un ou plusieurs tracés et proposer des alternatives en cas de contraintes identifiées avec les gestionnaires de voiries.`,
+    image:"images/copaya_c_juriste.png"
+  },
+  'Prévention C':{
+    text:`Afin d’optimiser la performance du marché, nous pourrions envisager d’intégrer des visites de sécurité sur le terrain avec une liste d’actions et d’amélioration à mettre en place dans un fichier de suivi.
+Je recommande également d’effectuer une visite de site obligatoire avant toute intervention.`,
+    image:"images/copaya_c_prevention.png"
+  },
+  'Acheteur C':{
+    text:`Il faut penser à indiquer les bons livrables ainsi que les formats attendus. Cela permettra de faciliter les réceptions :
+Les plans d’ensemble du tracé du réseau étudié (avec foliotage) au format PDF et DWG`,
+    image:"images/copaya_c_acheteur.png"
+  }
+};
+
+
+
+let currentGame=0,currentKey='';const sets={1:new Set(),2:new Set(),3:new Set(),4:new Set(),5:new Set(),6:new Set(),7:new Set(),8:new Set()};
 
 function openModal(key,game){
   currentGame=game; currentKey=key;
-  const src= game===2?data2 : game===3?data3 : game===4?data4 : game===5?data5 : game===6?data6 : game===7?data7 : data1;
+  const src= game===2?data2 : game===3?data3 : game===4?data4 : game===5?data5 : game===6?data6 : game===7?data7 : game===8?data8 : data1;
   const it=src[key];
-  document.getElementById('modalTitle').textContent=key.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','');
+  document.getElementById('modalTitle').textContent=key.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','');
   document.getElementById('modalImage').src=it.image;
   document.getElementById('modalText').textContent=it.text;
   document.getElementById('overlay').classList.add('active');
   document.getElementById('modal').classList.add('active');
 }
 function closeModal(){document.getElementById('overlay').classList.remove('active');document.getElementById('modal').classList.remove('active');}
-function collectInfo(){const set=sets[currentGame]; set.add(currentKey); const el=document.getElementById('infoLog'+currentGame); if(el) el.textContent="Infos collectées : "+Array.from(set).map(s=>s.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','')).join(', '); const total = Object.keys(currentGame===2?data2: currentGame===3?data3: currentGame===4?data4: currentGame===5?data5: currentGame===6?data6: currentGame===7?data7: data1).length; const b=document.getElementById('btnCCTP'+currentGame); if(b && sets[currentGame].size>=total){ b.style.display='inline-block'; } closeModal();}
+function collectInfo(){const set=sets[currentGame]; set.add(currentKey); const el=document.getElementById('infoLog'+currentGame); if(el) el.textContent="Infos collectées : "+Array.from(set).map(s=>s.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','')).join(', '); const total = Object.keys(currentGame===2?data2: currentGame===3?data3: currentGame===4?data4: currentGame===5?data5: currentGame===6?data6: currentGame===7?data7: currentGame===8?data8: data1).length; const b=document.getElementById('btnCCTP'+currentGame); if(b && sets[currentGame].size>=total){ b.style.display='inline-block'; } closeModal();}
 
 /* ----------------------- Aides identiques pour 9 onglets ----------------------- */
 const helpByStep = {
@@ -1059,6 +1158,64 @@ case 4: return [
       ]}
     ];
 
+
+    case 8: return [
+      {id:"objet",label:"Objet",help:helpByStep.objet,options:[
+        "Réalisation d’études réseau, branchement et colonne relevant des domaines BT et HTA, en aérien ou souterrain, sur tout le territoire de la Guyane",
+        "Maintenance et exploitation des réseaux BT et HTA",
+        "Prestations de déplacement d’ouvrages HTA et BT",
+        "Fourniture et  pose de fibres optiques aériennes et souterraines"
+      ]},
+      {id:"contexte",label:"Contexte",help:helpByStep.contexte,options:[
+        "Le marché concerne l’ensemble du territoire de la Guyane",
+        "Augmentation constante de raccordements producteurs",
+        "Développement de la politique d’aménagement du territoire avec l’arrivée de nouveaux projets immobiliers",
+        "Les études réalisées par le Titulaire doivent être conformes aux normes"
+      ]},
+      {id:"definition",label:"Définition de la prestation",help:helpByStep.definition,options:[
+        "Études de création, extension, renforcement, renouvellement et restructuration des réseaux HTA et BT",
+        "Études de raccordement des projets producteurs HTA",
+        "Études de pose de fibre optique en souterrain et en aérien",
+        "Exploitation et maintenance des ouvrages électriques"
+      ]},
+      {id:"limites_titulaire",label:"Limites à la charge du titulaire",help:helpByStep.limites_titulaire,options:[
+        "Disposer des qualifications ETA et ETS obligatoires",
+        "Connaître et appliquer la réglementation UTE C 18-510-1 et DT-DICT",
+        "Réaliser le marquage au sol ou piquetage in situ",
+        "Valider l’étude dans l’outil numérique I-PLANTE"
+      ]},
+      {id:"limites_entreprise",label:"Limites à la charge de l’entreprise",help:helpByStep.limites_entreprise,options:[
+        "Fournir les fonds de plan sous 10 jours",
+        "Autoriser le travail à partir du cadastre si les fonds de plan ne sont pas disponibles",
+        "Valider l’étude réalisée par le Titulaire sous 10 jours dans I-PLANTE",
+        "Réaliser les études réseau à la place du Titulaire"
+      ]},
+      {id:"qualite",label:"Qualité",help:helpByStep.qualite,options:[
+        "Savoir lire des plans de réseaux HTA et BT, cartes IGN et fonds de plan",
+        "Connaître les matériels électriques de réseau BT et les postes HTA/BT",
+        "Connaître les matériaux de remblayage et les niveaux de compactage Q1 à Q4",
+        "Les études peuvent être réalisées sans connaissance des schémas électriques"
+      ]},
+      {id:"conditions",label:"Conditions d’intervention",help:helpByStep.conditions,options:[
+        "Délai standard littoral : 1 mois",
+        "Délai standard communes de l’intérieur : 3 mois",
+        "Possibilité d’intégrer des bonus express pour réduire les délais",
+        "Les délais sont identiques quelle que soit la zone géographique"
+      ]},
+      {id:"resultats",label:"Résultats attendus",help:helpByStep.resultats,options:[
+        "Informer Copaya des éventuels points d’arrêt identifiés",
+        "Proposer un ou plusieurs tracés d’étude",
+        "Proposer des alternatives en cas de contraintes avec les gestionnaires de voirie",
+        "Réaliser directement les travaux sur le réseau"
+      ]},
+      {id:"reception_ref",label:"Réception",help:helpByStep.reception_ref,options:[
+        "Plans d’ensemble du tracé du réseau étudié avec foliotage",
+        "Fourniture des livrables aux formats PDF et DWG",
+        "Fourniture des livrables uniquement en format image (JPEG)",
+        "Absence de livrables formalisés"
+      ]}
+    ];
+
     default: return [];
   }
 }
@@ -1073,6 +1230,7 @@ const answerKeys = {
   1:{objet:[0], contexte:[0,1], definition:[0,1,2,3], limites_titulaire:[0,1], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1,2,3], resultats:[0,1,2], reception_ref:[0,1,2]},
   7:{objet:[2], contexte:[0,1,2,4], definition:[0,1,2,3], limites_titulaire:[0,1,2,3], limites_entreprise:[0,1,3], qualite:[0,2], conditions:[0,1,3], resultats:[0,2], reception_ref:[0,1,2]},
 
+  8:{objet:[0], contexte:[0,1,2], definition:[0,1,2], limites_titulaire:[0,1,2], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1], resultats:[0,1,2], reception_ref:[0,1]}
 };
 
 function startBuilder(gameId, reset){
