--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   window.goTo = function (id) {
     show(id);
     try { history.replaceState(null, '', '#' + id); } catch (e) { location.hash = id; }
-   if(/^game\d+$/.test(id)){ var g=parseInt(id.replace('game','')); try{ const set=sets[g]; const total=Object.keys(g===2?data2: g===3?data3: g===4?data4: g===5?data5: g===6?data6: g===7?data7: g===8?data8: data1).length; const b=document.getElementById('btnCCTP'+g); if(b){ b.style.display=(set.size>=total)?'inline-block':'none'; } }catch(e){} } };
+   if(/^game\d+$/.test(id)){ var g=parseInt(id.replace('game','')); try{ const set=sets[g]; const total=Object.keys(g===2?data2: g===3?data3: g===4?data4: g===5?data5: g===6?data6: g===7?data7: g===8?data8: g===9?data9: data1).length; const b=document.getElementById('btnCCTP'+g); if(b){ b.style.display=(set.size>=total)?'inline-block':'none'; } }catch(e){} } };
   window.addEventListener('hashchange', function () {
     var id = (location.hash || '#home').slice(1);
     show(id);
@@ -181,6 +181,12 @@
       <p class="muted">Véhicules Électriques : Explorez les services, puis rédigez le cahier des charges.</p>
       <button class="btn" onclick="goTo('game6_intro')">Lancer</button>
     </div>
+
+    <div class="card">
+      <h3>Jeu C — Application Chatbot (Sandrine)</h3>
+      <p class="muted">Chatbot RH : explorez les services, puis rédigez le cahier des charges.</p>
+      <button class="btn" onclick="goTo('game9_intro')">Lancer</button>
+    </div>
   </div>
   <button class="btn secondary" onclick="goTo('home')">⬅ Retour</button>
 </div></div>
@@ -249,6 +255,15 @@
   <h2>TILESA — Jeu B (Véhicules Électriques)</h2>
   <p>Vous incarnez Manon, pilote de la maintenance des véhicules. Vous êtes en charge de la rédaction d’un cahier des charges pour l’achat de véhicules électriques neufs.</p>
   <button class="btn" onclick="goTo('game6')">Démarrer</button>
+  <button class="btn secondary" onclick="goTo('domain_tertiaire')">⬅ Retour</button>
+</div></div>
+
+
+<div id="game9_intro" class="screen"><div class="container">
+  <img class="hero" src="images/accueil_tilesa3C.png" alt="">
+  <h2>TILESA — Jeu C (Application Chatbot)</h2>
+  <p>Sandrine, nouvelle alternante, doit rédiger un cahier des charges pour créer une application de type chatbot avec assistance virtuelle afin de répondre aux salariés sur des questions générales.</p>
+  <button class="btn" onclick="goTo('game9')">Démarrer</button>
   <button class="btn secondary" onclick="goTo('domain_tertiaire')">⬅ Retour</button>
 </div></div>
 
@@ -383,6 +398,25 @@
   <div class="info-log" id="infoLog6"></div>
   <div style="margin-top:10px;display:flex;gap:.5rem;flex-wrap:wrap">
     <button class="btn" id="btnCCTP6" style="display:none" onclick="startBuilder(6,true)">Rédiger le cahier des charges</button>
+    <button class="btn secondary" onclick="goTo('domain_tertiaire')">⬅ Retour</button>
+  </div>
+</div></div>
+
+
+<div id="game9" class="screen"><div class="container">
+  <h2>TILESA — Jeu C (Application Chatbot)</h2>
+  <div class="map">
+    <div class="location" onclick="openModal('Direction Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/219/219986.png" alt="">Direction</div>
+    <div class="location" onclick="openModal('RH Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135789.png" alt="">Ressources Humaines</div>
+    <div class="location" onclick="openModal('DSI Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/2621/2621140.png" alt="">Système d'information</div>
+    <div class="location" onclick="openModal('Cybersecurite Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/2092/2092663.png" alt="">Cybersécurité</div>
+    <div class="location" onclick="openModal('Juriste Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/2569/2569069.png" alt="">Juriste</div>
+    <div class="location" onclick="openModal('Utilisateurs Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="">Utilisateurs</div>
+    <div class="location" onclick="openModal('Acheteur Tilesa C',9)"><img src="https://cdn-icons-png.flaticon.com/512/602/602220.png" alt="">Acheteur</div>
+  </div>
+  <div class="info-log" id="infoLog9"></div>
+  <div style="margin-top:10px;display:flex;gap:.5rem;flex-wrap:wrap">
+    <button class="btn" id="btnCCTP9" style="display:none" onclick="startBuilder(9,true)">Rédiger le cahier des charges</button>
     <button class="btn secondary" onclick="goTo('domain_tertiaire')">⬅ Retour</button>
   </div>
 </div></div>
@@ -729,21 +763,56 @@ Les plans d’ensemble du tracé du réseau étudié (avec foliotage) au format 
 };
 
 
+const data9={
+  'Direction Tilesa C':{
+    text:`La Direction souhaite améliorer la qualité de service interne en donnant aux salariés un accès simple et rapide à l’information. L’objectif est de créer une application de type chatbot, disponible 24/7, capable de répondre aux questions générales (RH, procédures internes, outils, sécurité) et d’orienter vers les bons interlocuteurs si besoin.`,
+    image:"images/direction_tilesa3C.png"
+  },
+  'RH Tilesa C':{
+    text:`La Responsable RH rappelle que le chatbot doit répondre aux questions fréquentes : congés, absences, télétravail, notes de frais, formation, avantages, contacts RH. Les réponses doivent être conformes aux règles internes et au Code du travail. Un espace d’administration doit permettre de mettre à jour facilement les contenus (FAQ, documents, liens).`,
+    image:"images/rh_tilesa3C.png"
+  },
+  'DSI Tilesa C':{
+    text:`La DSI précise les besoins techniques : authentification (SSO si possible), gestion des droits (salariés / managers / RH), journalisation, hébergement sécurisé, sauvegardes, intégration possible avec l’intranet et/ou une base documentaire. Le chatbot doit fonctionner sur mobile et PC, avec une interface simple.`,
+    image:"images/dsi_tilesa3C.png"
+  },
+  'Cybersecurite Tilesa C':{
+    text:`L’expert cybersécurité insiste sur : RGPD, minimisation des données, chiffrement en transit et au repos, gestion des accès, traçabilité, protection contre l’injection de prompt, tests de sécurité (OWASP), plan de continuité, et procédure de signalement d’incident. Les logs doivent être maîtrisés et conservés selon une durée définie.`,
+    image:"images/cybersecurite_tilesa3C.png"
+  },
+  'Juriste Tilesa C':{
+    text:`La juriste recommande d’encadrer : propriété intellectuelle, confidentialité, localisation des données, sous-traitance, réversibilité, SLA, pénalités, et clauses de conformité (RGPD). La sous-traitance peut être autorisée mais doit être déclarée et ne pas porter sur le cœur de la prestation sans accord.`,
+    image:"images/juriste_tilesa3C.png"
+  },
+  'Utilisateurs Tilesa C':{
+    text:`Les utilisateurs attendent une application intuitive : recherche en langage naturel, réponses courtes + liens, possibilité d’escalader vers un humain, historique des échanges, accessibilité (lisibilité), et prise en compte des contraintes terrain (connexion variable). Ils souhaitent aussi pouvoir donner un feedback (utile / pas utile).`,
+    image:"images/utilisateurs_tilesa3C.png"
+  },
+  'Acheteur Tilesa C':{
+    text:`L’acheteur rappelle les livrables attendus : note d’architecture, maquettes, planning, documentation utilisateur et administrateur, guide d’exploitation, plan de tests, procès-verbaux de recette (VSR), formation, et support. Il faut définir clairement les formats (PDF, DOCX, etc.) et les niveaux de service (SLA).`,
+    image:"images/acheteur_tilesa3C.png"
+  }
+};
 
-let currentGame=0,currentKey='';const sets={1:new Set(),2:new Set(),3:new Set(),4:new Set(),5:new Set(),6:new Set(),7:new Set(),8:new Set()};
+
+
+
+
+
+let currentGame=0,currentKey='';const sets={1:new Set(),2:new Set(),3:new Set(),4:new Set(),5:new Set(),6:new Set(),7:new Set(),8:new Set(),9:new Set()};
 
 function openModal(key,game){
   currentGame=game; currentKey=key;
-  const src= game===2?data2 : game===3?data3 : game===4?data4 : game===5?data5 : game===6?data6 : game===7?data7 : game===8?data8 : data1;
+  const src= game===2?data2 : game===3?data3 : game===4?data4 : game===5?data5 : game===6?data6 : game===7?data7 : game===8?data8 : game===9?data9 : data1;
   const it=src[key];
-  document.getElementById('modalTitle').textContent=key.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','');
+  document.getElementById('modalTitle').textContent=key.replace(' Tilesa B','').replace(' Tilesa C','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','');
   document.getElementById('modalImage').src=it.image;
   document.getElementById('modalText').textContent=it.text;
   document.getElementById('overlay').classList.add('active');
   document.getElementById('modal').classList.add('active');
 }
 function closeModal(){document.getElementById('overlay').classList.remove('active');document.getElementById('modal').classList.remove('active');}
-function collectInfo(){const set=sets[currentGame]; set.add(currentKey); const el=document.getElementById('infoLog'+currentGame); if(el) el.textContent="Infos collectées : "+Array.from(set).map(s=>s.replace(' Tilesa B','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','')).join(', '); const total = Object.keys(currentGame===2?data2: currentGame===3?data3: currentGame===4?data4: currentGame===5?data5: currentGame===6?data6: currentGame===7?data7: currentGame===8?data8: data1).length; const b=document.getElementById('btnCCTP'+currentGame); if(b && sets[currentGame].size>=total){ b.style.display='inline-block'; } closeModal();}
+function collectInfo(){const set=sets[currentGame]; set.add(currentKey); const el=document.getElementById('infoLog'+currentGame); if(el) el.textContent="Infos collectées : "+Array.from(set).map(s=>s.replace(' Tilesa B','').replace(' Tilesa C','').replace(' B','').replace(' Copaya','').replace(' Carl','').replace(' C','')).join(', '); const total = Object.keys(currentGame===2?data2: currentGame===3?data3: currentGame===4?data4: currentGame===5?data5: currentGame===6?data6: currentGame===7?data7: currentGame===8?data8: currentGame===9?data9: data1).length; const b=document.getElementById('btnCCTP'+currentGame); if(b && sets[currentGame].size>=total){ b.style.display='inline-block'; } closeModal();}
 
 /* ----------------------- Aides identiques pour 9 onglets ----------------------- */
 const helpByStep = {
@@ -1216,6 +1285,68 @@ case 4: return [
       ]}
     ];
 
+    
+    case 9: return [
+      {id:"objet",label:"Objet",help:helpByStep.objet,options:[
+        "Création d’une application de type chatbot avec assistance virtuelle pour répondre aux salariés sur des questions générales",
+        "Mise en place d’un outil de gestion de paie",
+        "Déploiement d’un nouveau réseau Wi‑Fi sur les sites",
+        "Développement d’un site e‑commerce"
+      ]},
+      {id:"contexte",label:"Contexte",help:helpByStep.contexte,options:[
+        "Besoin d’un accès rapide et homogène à l’information interne (RH, procédures, outils)",
+        "Réduction des sollicitations répétitives des équipes support (RH/DSI)",
+        "Disponibilité de l’assistant 24/7, y compris pour les équipes terrain",
+        "Objectif principal : remplacer entièrement les équipes RH",
+        "Nécessité d’un canal de remontée vers un humain en cas de question complexe"
+      ]},
+      {id:"definition",label:"Définition de la prestation",help:helpByStep.definition,options:[
+        "Conception UX/UI et développement du chatbot (web/mobile)",
+        "Mise en place d’une base de connaissances + interface d’administration pour la mise à jour des contenus",
+        "Intégration technique (SSO, intranet / base documentaire) et journalisation",
+        "Hébergement, supervision et maintenance applicative",
+        "Création d’un call center externalisé"
+      ]},
+      {id:"limites_titulaire",label:"Limites à la charge du titulaire",help:helpByStep.limites_titulaire,options:[
+        "Réalisation des développements, tests et corrections",
+        "Fourniture de la documentation (utilisateur + administrateur) et formation",
+        "Mise en œuvre des mesures de cybersécurité (chiffrement, contrôle d’accès, tests OWASP)",
+        "Support et maintenance pendant la durée du marché (SLA)",
+        "Fourniture des informations RH officielles à jour"
+      ]},
+      {id:"limites_entreprise",label:"Limites à la charge de l’entreprise",help:helpByStep.limites_entreprise,options:[
+        "Fourniture/validation des contenus (FAQ, procédures, documents internes) et des référents métier",
+        "Validation des livrables et recette (VSR) dans les délais convenus",
+        "Mise à disposition des accès/informations nécessaires (intranet, SSO, comptes)",
+        "Développement complet de l’application par les équipes internes"
+      ]},
+      {id:"qualite",label:"Qualité",help:helpByStep.qualite,options:[
+        "Conformité RGPD, confidentialité et traçabilité",
+        "Accessibilité et ergonomie (mobile/PC), réponses claires + liens",
+        "Disponibilité cible (SLA), performance et supervision",
+        "Aucune exigence qualité particulière"
+      ]},
+      {id:"conditions",label:"Conditions d’intervention",help:helpByStep.conditions,options:[
+        "Ateliers de cadrage/brainstorming avec les métiers (Direction, RH, DSI, juriste, utilisateurs)",
+        "Visite de site / prise en compte des contraintes terrain (connexion variable)",
+        "Interventions uniquement en dehors des heures de bureau",
+        "Respect des règles SSI et procédures internes lors des interventions"
+      ]},
+      {id:"resultats",label:"Résultats attendus",help:helpByStep.resultats,options:[
+        "Un chatbot opérationnel répondant aux questions fréquentes et orientant vers un humain si nécessaire",
+        "Une base de connaissances administrable et mise à jour facilement",
+        "Un plan de suivi : satisfaction, taux de résolution, temps de réponse",
+        "Suppression de tous les emails internes"
+      ]},
+      {id:"reception_ref",label:"Réception",help:helpByStep.reception_ref,options:[
+        "Plan de tests + PV de recette (VSR) et levée des réserves",
+        "Remise des livrables (code, documentation, guides d’exploitation) aux formats définis",
+        "Phase pilote / démonstration avant mise en production",
+        "Acceptation automatique sans contrôle"
+      ]}
+    ];
+
+
     default: return [];
   }
 }
@@ -1230,7 +1361,8 @@ const answerKeys = {
   1:{objet:[0], contexte:[0,1], definition:[0,1,2,3], limites_titulaire:[0,1], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1,2,3], resultats:[0,1,2], reception_ref:[0,1,2]},
   7:{objet:[2], contexte:[0,1,2,4], definition:[0,1,2,3], limites_titulaire:[0,1,2,3], limites_entreprise:[0,1,3], qualite:[0,2], conditions:[0,1,3], resultats:[0,2], reception_ref:[0,1,2]},
 
-  8:{objet:[0], contexte:[0,1,2], definition:[0,1,2], limites_titulaire:[0,1,2], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1], resultats:[0,1,2], reception_ref:[0,1]}
+  8:{objet:[0], contexte:[0,1,2], definition:[0,1,2], limites_titulaire:[0,1,2], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1], resultats:[0,1,2], reception_ref:[0,1]},
+  9:{objet:[0], contexte:[0,1,2,4], definition:[0,1,2,3], limites_titulaire:[0,1,2,3], limites_entreprise:[0,1,2], qualite:[0,1,2], conditions:[0,1,3], resultats:[0,1,2], reception_ref:[0,1,2]}
 };
 
 function startBuilder(gameId, reset){
@@ -1240,7 +1372,7 @@ function startBuilder(gameId, reset){
   const container=document.getElementById('builderContainer');
   if(reset){ container.innerHTML=''; }
 
-  const titles={1:"TILESA — Jeu A",2:"LESATI — Jeu A",3:"LESATI — Jeu B",4:"COPAYA — Jeu A",5:"COPAYA — Jeu B",6:"TILESA — Jeu B",7:"LESATI — Jeu C"};
+  const titles={1:"TILESA — Jeu A",2:"LESATI — Jeu A",3:"LESATI — Jeu B",4:"COPAYA — Jeu A",5:"COPAYA — Jeu B",6:"TILESA — Jeu B",7:"LESATI — Jeu C",8:"COPAYA — Jeu C",9:"TILESA — Jeu C"};
   container.innerHTML = `<h2>${titles[gameId]} — Assistant (QCM)</h2>
     <div class="small">Rédiger votre CCTP avec votre assistant.</div>
     <div class="progress"><span id="builderProgress"></span></div>
@@ -1319,7 +1451,7 @@ function levelBadge(pct){
 
 function finishBuilder(gameId, steps){
 
-  let html='<h2>Résumé - '+({1:"TILESA — Jeu A",2:"LESATI — Jeu A",3:"LESATI — Jeu B",4:"COPAYA — Jeu A",5:"COPAYA — Jeu B",6:"TILESA — Jeu B",7:"LESATI — Jeu C"}[gameId])+'</h2>';
+  let html='<h2>Résumé - '+({1:"TILESA — Jeu A",2:"LESATI — Jeu A",3:"LESATI — Jeu B",4:"COPAYA — Jeu A",5:"COPAYA — Jeu B",6:"TILESA — Jeu B",7:"LESATI — Jeu C",8:"COPAYA — Jeu C",9:"TILESA — Jeu C"}[gameId])+'</h2>';
   // Récap simple des choix
   steps.forEach((s,i)=>{
     const picked=[...(window._builderSelections[s.id]||[])].sort((a,b)=>a-b);
