--- a/index.html
+++ b/index.html
@@ -1291,13 +1291,13 @@ case 4: return [
       {id:"objet",label:"Objet",help:helpByStep.objet,options:[
         "Création d’une application de type chatbot avec assistance virtuelle pour répondre aux salariés sur des questions générales",
         "Mise en place d’un outil de gestion de paie",
-        "Déploiement d’un nouveau réseau Wi‑Fi sur les sites",
-        "Développement d’un site e‑commerce"
+        "Déploiement d’un nouveau réseau Wi Fi sur les sites",
+        "Développement d’un site e commerce"
       ]},
       {id:"contexte",label:"Contexte",help:helpByStep.contexte,options:[
         "Besoin d’un accès rapide et homogène à l’information interne (RH, procédures, outils)",
-        "Réduction des sollicitations répétitives des équipes support (RH/DSI)",
-        "Disponibilité de l’assistant 24/7, y compris pour les équipes terrain",
+        "Sollicitations répétitives des équipes support (RH/DSI)",
+        "Recherche d’une assistance 24h/24 pour les équipes terrain",
         "Objectif principal : remplacer entièrement les équipes RH",
         "Nécessité d’un canal de remontée vers un humain en cas de question complexe"
       ]},
@@ -1312,32 +1312,31 @@ case 4: return [
         "Réalisation des développements, tests et corrections",
         "Fourniture de la documentation (utilisateur + administrateur) et formation",
         "Mise en œuvre des mesures de cybersécurité (chiffrement, contrôle d’accès, tests OWASP)",
-        "Support et maintenance pendant la durée du marché (SLA)",
+        "Support et maintenance pendant la durée du marché",
         "Fourniture des informations RH officielles à jour"
       ]},
       {id:"limites_entreprise",label:"Limites à la charge de l’entreprise",help:helpByStep.limites_entreprise,options:[
         "Fourniture/validation des contenus (FAQ, procédures, documents internes) et des référents métier",
-        "Validation des livrables et recette (VSR) dans les délais convenus",
+        "Validation des livrables dans les délais convenus",
         "Mise à disposition des accès/informations nécessaires (intranet, SSO, comptes)",
-        "Développement complet de l’application par les équipes internes"
+        "Développement complet de l’application par les équipes de TILESA"
       ]},
       {id:"qualite",label:"Qualité",help:helpByStep.qualite,options:[
         "Conformité RGPD, confidentialité et traçabilité",
         "Accessibilité et ergonomie (mobile/PC), réponses claires + liens",
-        "Disponibilité cible (SLA), performance et supervision",
+        "Disponibilité cible, performance et supervision",
         "Aucune exigence qualité particulière"
       ]},
       {id:"conditions",label:"Conditions d’intervention",help:helpByStep.conditions,options:[
-        "Ateliers de cadrage/brainstorming avec les métiers (Direction, RH, DSI, juriste, utilisateurs)",
-        "Visite de site / prise en compte des contraintes terrain (connexion variable)",
-        "Interventions uniquement en dehors des heures de bureau",
-        "Respect des règles SSI et procédures internes lors des interventions"
+        "Ateliers de cadrage (2 fois par an) avec le service RH",
+        "Phases de tests avant mise en production",
+        "Respect des règles SSI et procédures internes",
+        "Mise en service sans validation préalable"
       ]},
       {id:"resultats",label:"Résultats attendus",help:helpByStep.resultats,options:[
-        "Un chatbot opérationnel répondant aux questions fréquentes et orientant vers un humain si nécessaire",
-        "Une base de connaissances administrable et mise à jour facilement",
-        "Un plan de suivi : satisfaction, taux de résolution, temps de réponse",
-        "Suppression de tous les emails internes"
+        "Amélioration des indicateurs taux de satisfaction, taux de résolution et temps de réponse",
+        "Un chatbot opérationnel (24/7) répondant aux questions fréquentes et orientant vers un humain si nécessaire",
+        "Remplacement total des échanges humains"
       ]},
       {id:"reception_ref",label:"Réception",help:helpByStep.reception_ref,options:[
         "Plan de tests + PV de recette (VSR) et levée des réserves",
